samples/_failures_safe/1761124994_989aba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc9a40cd.c: In function ‘main’:
./samples/SAFE/__tmp_fc9a40cd.c:157:28: error: missing terminating " character
  157 |                     printf("Error: Matrices must have same dimensions for addition.\n
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fc9a40cd.c:157:21: error: expected expression at end of input
  157 |                     printf("Error: Matrices must have same dimensions for addition.\n
      |                     ^~~~~~
./samples/SAFE/__tmp_fc9a40cd.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc9a40cd.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc9a40cd.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc9a40cd.c:157:21: error: expected declaration or statement at end of input
